# HSE.DeepLearning

./: .gitignore  .gitmodules  README.md  deep_sort_app.py  evaluate_motchallenge.py  requirements-colab.txt  requirements.txt  setup.cfg  setup.py  show_results.py
app/: app.py  image_viewer.py  visualization.py
app/drawing/: color.py  drawing_context.py  paint.py
app/player/: images_media_sequence.py  media_player.py  media_sequence.py
app/window/: virtual_window.py  window.py
application_util/: image_viewer.py  preprocessing.py  visualization.py
challenge/: mot_challenge_descriptor.py
commands/: evaluate_motchallenge.py  freeze_model.py  generate_detections.py  generate_videos.py  show_ground_truth.py  show_results.py
data/detections/: KITTI-17.npy  TUD-Campus.npy  TUD-Stadtmitte.npy
dataset/: mot_dataset_descriptor.py
dataset/mot/: mot_dataset_descriptor.py  mot_ground_truth.py
deep_sort/: detection.py  iou_matching.py  linear_assignment.py  track.py  tracker.py
deep_sort/detector/: __init__.py  detection.py  detections_provider.py  file_detections_provider.py  hog_detections_provider.py  mmdetection_detections_provider.py  nanodet_detections_provider.py  yolov5_detections_provider.py
deep_sort/geometry/: iou_utils.py  rect.py
deep_sort/utils/geometry/: iou_utils.py  rect.py
depdendencies/: definitions.py
depdendencies/nanodet_binaries/: nanodet_model.py
dependencies/: definitions.py
dependencies/nanodet_binaries/: nanodet_model.py  nanodet_plus_m_320.yml  nanodet_plus_m_416.yml
results/original/: metrics.txt  tud-campus.webm
results/yolov5/: medium_mobilenet  small_mobilenet
results/yolov8/torchreid_mobilenet/: tud-campus.webm
results/yolov8/torchreid_osnet075/: tud-campus.webm
src/app/: app.py  visualization.py
src/app/drawing/: drawing_context.py  paint.py
src/app/player/: images_media_sequence.py  media_player.py  media_sequence.py
src/app/window/: opencv_window.py  virtual_window.py  window.py
src/commands/: cmd_run_deep_sort.py  cmd_show_ground_truth.py  deep_sort.py  evaluate_sequences.py  generate_detections.py  run_deep_sort.py  show_ground_truth.py  show_results.py
src/commands/utils/: cl_arguments_utils.py
src/dataset/mot/: mot_dataset_descriptor.py  (+2 more)
src/deep_sort/: deep_sort.py  linear_assignment.py  nn_matching.py  preprocessing.py  track.py  tracker.py
src/metrics/: confusion_matrix_metric.py  fps_metric.py  hota_metric.py  metric.py  metrics_mixer.py  metrics_printer.py  no_op_metrics_mixer.py  no_op_metrics_printer.py  std_metrics_printer.py
src/utils/: benchmarking.py  deprecations.py
tests/: test_iou_matching.py  test_iou_utils.py  test_rect.py
tools/: generate_detections.py  show_results.py
utils/: torch_utils.py
utils/geometry/: iou_utils.py  rect.py
(+21 files in other folders)
