[metadata]
name = deep_sort
version = 0.0.1
author = Alex Dadukin
author_email = alexanderdadukin@gmail.com
description = Deep SORT implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/st235/HSE.DeepLearning
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy>=1.23.5
    scipy>=1.10.1
    pytest>=7.3.1
    opencv-python>=4.7.0.72
    torch>=1.13.1
    mmcv>=2.0.0
    terminaltables>=3.1.10
    shapely>=2.0.1
    tensorflow>=2.12.0

[options.entry_points]
console_scripts =
    ds-run = src.commands.run_deep_sort:main
    ds-ground-truth = src.commands.show_ground_truth:main
    ds-evaluate = src.commands.evaluate_sequences:main
