[metadata]
name = deep_sort
version = 0.0.1
author = Alex Dadukin
author_email = alexanderdadukin@gmail.com
description = Deep SORT implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/st235/HSE.DeepLearning
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy==1.23.5
    scipy==1.10.1
    pytest==7.3.1
    opencv-python==4.7.0.72
    torch==1.13.1
    mmcv==2.0.0
    terminaltables==3.1.10
    shapely==2.0.1
    tensorflow==2.12.0
    pycocotools==2.0.6
    pytorch_lightning==2.0.4
    torchvision==0.14.1
    pandas==2.0.3
    psutil==5.9.5
    ultralytics==8.0.124
    GitPython==3.1.30

[options.entry_points]
console_scripts =
    deep-sort = src.commands.deep_sort:main
